plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

javafx {
    version = "23.0.1" // Versión más reciente compatible con Java 25
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'com.cyrcetech.CyrcetechApp'
    mainModule = 'com.cyrcetech'
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.2.1'
    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
    implementation 'net.synedra:validatorfx:0.5.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
}

test {
    useJUnitPlatform()
    jvmArgs('--enable-preview')
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ["--enable-preview"]
    options.release = 25
}

tasks.withType(JavaExec) {
    jvmArgs += ["--enable-preview"]
}

run {
    jvmArgs += [
        "--module-path", configurations.runtimeClasspath.asPath,
        "--add-modules", "javafx.controls,javafx.fxml"
    ]
}
